NDS-428: Fix visual regression on page header  (#335)
* NDS-412 Convert action banner from class to rfc. Add demo to testpage

* NDS-412 Add return type

* NDS-412 Update action banner for new variant

* Revert "NDS-412 Update action banner for new variant"

This reverts commit 3557cac46c2d3a924fa6cfcf195fa093aab286e5.

* NDS-412 Add fullWidth variant with background image

* NDS-412 Remove commented code. Add padding to action banner container to match figma visual

* NDS-412 Add action-banner image styles for mobile first

* NDS-412 Remove template debug

* NDS-412 Override transform for __actions block

* NDS-412 Add full width subtle variant. Adjust font sizes as per xd

* NDS-412 Use mixins for lead and title font-size

* NDS-412 Change variable name so comment isn't required

* NDS-412 Add unit tests

* NDS-412 Move closing unit tests and remove duplicated test

* NDS-412 Make onClosing testable - wip

* NDS-412 Remove experimental unit testing of onClose prop error behaviour

* NDS-412 Update docs - wip

* NDS-412 Add props and style for full width examples. Add link colour and focus for fullWidth variants. Update docs

* initial commit

* render expand button after heading at index 1

* add wrapper div in example to contain full width components

* add optional index prop to identify fullWidth component position in example block

* fix: update PageHeader to carry verticalPadding prop

- add prop for verticalPadding with default of null and variant of loose.
- fixes vertical padding visual regression across services

Co-authored-by: John Davey <johndavey72@users.noreply.github.com>

* Publish

 - @nice-digital/design-system@5.0.27-alpha.0
 - @nice-digital/nds-page-header@4.0.15-alpha.0
 - @nice-digital/design-system-docs@1.0.28-alpha.0

* NDS-429 Checkout updated items from main

* NDS-429 Reset test page changes

* NDS-428: spike refactor PageHeader grid

- update to render of grid based on sec

--- a/docs/components/examples/Example.module.scss
+++ b/docs/components/examples/Example.module.scss
@@ -7,7 +7,23 @@
   background: transparent;
   border: 1px solid colours.$border;
   margin: 0 0 utils.rem(spacing.$medium);
+  overflow-x: hidden;
   padding: utils.rem(spacing.$medium);
+  position: relative;
+
+  &.expanded {
+    background-color: #fff;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 100;
+  }
+
+  & .expandButton {
+    margin-bottom: 2rem;
+  }
 
   & > h2,
   & > h3,
@@ -16,6 +32,12 @@
   & > h6 {
     @include typography.h6;
     margin-top: 0;
+  }
+
+  .fullWidthWrapper > :first-child {
+    max-width: 100%;
+    left: unset;
+    margin: unset;
   }
 
   // TODO: apply these styles specifically to the grid example page
