NDS-426 : create accessible accordion (#334)
* NDS-426 Initial new component commit

* NDS-426 package file structure setup and rendering - wip

* NDS-426 BEMify the module styles and bring colours from the accordion component copied from BNF - wip

* NDS-426 Add space for readability

Co-authored-by: Chris Barker <barkertron@users.noreply.github.com>
Co-authored-by: Dale Hudson <dalecreativ@users.noreply.github.com>

* Publish

 - @nice-digital/design-system@5.1.0-alpha.0
 - @nice-digital/nds-a-z-list@4.1.0-alpha.0
 - @nice-digital/nds-accordion@0.2.0-alpha.0
 - @nice-digital/nds-action-banner@4.1.0-alpha.0
 - @nice-digital/nds-alert@4.1.0-alpha.0
 - @nice-digital/nds-alphabet@3.1.0-alpha.0
 - @nice-digital/nds-breadcrumbs@4.1.0-alpha.0
 - @nice-digital/nds-button@4.1.0-alpha.0
 - @nice-digital/nds-card@4.1.0-alpha.0
 - @nice-digital/nds-checkbox@4.1.0-alpha.0
 - @nice-digital/nds-column-list@4.1.0-alpha.0
 - @nice-digital/nds-container@4.1.0-alpha.0
 - @nice-digital/nds-core@4.1.0-alpha.0
 - @nice-digital/nds-enhanced-pagination@4.1.0-alpha.0
 - @nice-digital/nds-filters@5.1.0-alpha.0
 - @nice-digital/nds-form-group@4.1.0-alpha.0
 - @nice-digital/nds-full-bleed@4.1.0-alpha.0
 - @nice-digital/nds-grid@4.1.0-alpha.0
 - @nice-digital/nds-hero@4.1.0-alpha.0
 - @nice-digital/nds-horizontal-nav@4.1.0-alpha.0
 - @nice-digital/nds-in-page-nav@4.1.0-alpha.0
 - @nice-digital/nds-input@4.1.0-alpha.0
 - @nice-digital/nds-maintain-ratio@4.1.0-alpha.0
 - @nice-digital/nds-page-header@4.1.0-alpha.0
 - @nice-digital/nds-panel@4.1.0-alpha.0
 - @nice-digital/nds-phase-banner@4.1.0-alpha.0
 - @nice-digital/nds-prev-next@4.1.0-alpha.0
 - @nice-digital/nds-radio@4.1.0-alpha.0
 - @nice-digital/nds-simple-pagination@4.1.0-alpha.0
 - @nice-digital/nds-stacked-nav@4.1.0-alpha.0
 - @nice-digital/nds-table@4.1.0-alpha.0
 - @nice-digital/nds-tabs@4.1.0-alpha.0
 - @nice-digital/nds-tag@4.1.0-alpha.0
 - @nice-digital/nds-textarea@4.1.0-alpha.0
 - 

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -64,6 +64,15 @@ $radio-hint: global.$black-tint-1;
 // A-Z list
 $a-z-list-heading-background: global.$white;
 
+// Accordion
+$accordion-default-background: global.$white;
+$accordion-details-border: global.$black;
+$accordion-toggle-warning-label: global.$nice-black;
+$accordion-summary-hover: global.$nice-teal-tint-3;
+$accordion-summary-focus: global.$nice-teal;
+$accrordion-label-text: global.$custom-blue-1;
+$accrordion-label-text-hover: global.$nice-blue-tint-4;
+
 // Action banner
 $action-banner-default-background: global.$nice-blue;
 $action-banner-default-border: global.$nice-black;
