Nds 441 modify hero component to display description (#338)
* NDS-441 Add description to hero.

Co-authored-by: Dale Hudson <dalecreativ@users.noreply.github.com>

* NDS-441 update spacing between intro and description text

---------

Co-authored-by: John Davey <john.davey@nice.org.uk>
Co-authored-by: Dale Hudson <dalecreativ@users.noreply.github.com>

--- a/components/nds-hero/scss/hero.scss
+++ b/components/nds-hero/scss/hero.scss
@@ -49,11 +49,16 @@
 
   &__title {
     @include typography.h1;
+    margin-bottom: utils.rem(spacing.$large);
   }
 
   &__intro {
     @include typography.lead;
-    margin-bottom: utils.rem(spacing.$large);
+    margin-block: utils.rem(spacing.$medium);
+  }
+
+  &__actions {
+    margin-top: utils.rem(spacing.$large);
   }
 
   &__image-container {
