NDS-444 Add image display logic and classes for fulWidthSubtle action banner variant

--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -63,7 +63,8 @@
     }
   }
 
-  &--full-width {
+  &--full-width,
+  &--full-width-subtle {
     @include layout.fullWidth();
     @include typography.links-default;
     background: colours.$action-banner-full-width-background;
@@ -149,7 +150,8 @@
   }
 
   @include media-queries.mq($from: sm) {
-    &--full-width {
+    &--full-width,
+    &--full-width-subtle {
       &__image-container {
         aspect-ratio: 21 / 9;
       }
@@ -159,7 +161,8 @@
   @include media-queries.mq($from: md) {
     @include layout.clearfix;
 
-    &--full-width {
+    &--full-width,
+    &--full-width-subtle {
       &__image-container {
         aspect-ratio: unset;
         bottom: 0;
@@ -175,7 +178,6 @@
         }
 
         &::before {
-          background: colours.$action-banner-full-width-background;
           content: '';
           flex: 0 0 200px;
           pointer-events: none;
@@ -188,6 +190,22 @@
       @include media-queries.mq($from: md) {
         .action-banner__text {
           width: 66%;
+        }
+      }
+    }
+
+    &--full-width {
+      &__image-container {
+        &::before {
+          background: colours.$action-banner-full-width-background;
+        }
+      }
+    }
+
+    &--full-width-subtle {
+      &__image-container {
+        &::before {
+          background: colours.$action-banner-full-width-subtle-background;
         }
       }
     }
