--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -14,6 +14,7 @@
 
 /// Action banner component. Used to highlight
 /// and give context to a call-to-action.
+///
 /// Modifiers:
 /// - subtle
 ///
