NDS-444-image-display-for-action-banner-full-width-subtle-variant (#340)
* NDS-444 Add image display logic and classes for fulWidthSubtle action banner variant

* NDS-444 update test page

* Publish

 - @nice-digital/design-system@5.4.0
 - @nice-digital/nds-action-banner@4.2.0
 - @nice-digital/design-system-docs@1.4.0

* NDS-444 Comment out testpage action banners

* Publish

 - @nice-digital/design-system-docs@1.5.0-alpha.0

* NDS-444 Minor change to fix npm alpha tag

* Publish

 - @nice-digital/design-system@5.4.1-alpha.0
 - @nice-digital/nds-action-banner@4.2.1-alpha.0
 - @nice-digital/design-system-docs@1.5.1-alpha.0

--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -14,6 +14,7 @@
 
 /// Action banner component. Used to highlight
 /// and give context to a call-to-action.
+///
 /// Modifiers:
 /// - subtle
 ///
@@ -63,7 +64,8 @@
     }
   }
 
-  &--full-width {
+  &--full-width,
+  &--full-width-subtle {
     @include layout.fullWidth();
     @include typography.links-default;
     background: colours.$action-banner-full-width-background;
@@ -149,7 +151,8 @@
   }
 
   @include media-queries.mq($from: sm) {
-    &--full-width {
+    &--full-width,
+    &--full-width-subtle {
       &__image-container {
         aspect-ratio: 21 / 9;
       }
@@ -159,7 +162,8 @@
   @include media-queries.mq($from: md) {
     @include layout.clearfix;
 
-    &--full-width {
+    &--full-width,
+    &--full-width-subtle {
       &__image-container {
         aspect-ratio: unset;
         bottom: 0;
@@ -175,7 +179,6 @@
         }
 
         &::before {
-          background: colours.$action-banner-full-width-background;
           content: '';
           flex: 0 0 200px;
           pointer-events: none;
@@ -188,6 +191,22 @@
       @include media-queries.mq($from: md) {
         .action-banner__text {
           width: 66%;
+        }
+      }
+    }
+
+    &--full-width {
+      &__image-container {
+        &::before {
+          background: colours.$action-banner-full-width-background;
+        }
+      }
+    }
+
+    &--full-width-subtle {
+      &__image-container {
+        &::before {
+          background: colours.$action-banner-full-width-subtle-background;
         }
       }
     }
