--- a/components/nds-card/scss/card.scss
+++ b/components/nds-card/scss/card.scss
@@ -102,10 +102,14 @@
   }
 
   &__summary {
-    margin: utils.rem(0 0 spacing.$small 0);
+    margin: 0;
 
     a {
       position: relative;
+    }
+
+    &--card-has-children {
+      margin-bottom: utils.rem(spacing.$small);
     }
   }
 
