--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -34,9 +34,16 @@
   &__container {
     @include layout.container;
   }
-
+  &__inner {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    gap: utils.rem(spacing.$small);
+  }
   &__text {
     margin-bottom: utils.rem(spacing.$medium);
+    flex: 1 1 70%;
   }
 
   &__title {
@@ -50,7 +57,7 @@
 
   &__actions {
     @include focus.inverse-button-focus;
-
+    flex: 0 0 auto;
     .btn {
       margin: 0;
     }
@@ -213,19 +220,27 @@
       }
     }
   }
-  @container actionBanner (min-width: 900px) {
-    &__text {
-      margin-bottom: 0;
-      width: math.percentage(3 * 0.25);
+
+  @include media-queries.mq($until: sm) {
+    .action-banner__actions .btn {
+      white-space: normal;
+      word-break: break-word;
+      inline-size: 100%;
+    }
+    .action-banner__text {
+      white-space: normal;
+      word-break: break-word;
+      inline-size: 100%;
+    }
+  }
+  @include media-queries.mq($until: sm) {
+    .action-banner__inner {
+      flex-direction: column;
+      align-items: flex-start;
     }
 
-    &__actions {
-      position: absolute;
-      right: utils.rem(spacing.$medium);
-      text-align: right;
-      top: 50%;
-      transform: translateY(-50%);
-      width: math.percentage(1 * 0.25);
+    .action-banner__actions {
+      margin-top: utils.rem(spacing.$small);
     }
   }
 }
