NDS-465 Fix action banner inner display property to unset for fullwidth variant

--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -83,6 +83,9 @@
       @include typography.lead();
       margin-top: utils.rem(spacing.$medium);
     }
+    .action-banner__inner {
+      display: unset;
+    }
 
     .action-banner__container {
       @include layout.fullWidthContainer();
