--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -55,6 +55,7 @@
   &__actions {
     @include focus.inverse-button-focus;
     flex: 0 0 auto;
+    max-width: 100%;
     .btn {
       margin: 0;
     }
