NDS-469-buttons-on-full-width-action-banner-expands-to-full-width-on-mobile (#359)
* NDS-469 Fix button style issue on full width action banner

* NDS-469 Fix max-width for action banner buttons to ensure proper layout

* NDS-469 Fix button overflowing out of container issue for screen size above 600px

--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -55,8 +55,11 @@
   &__actions {
     @include focus.inverse-button-focus;
     flex: 0 0 auto;
+    max-width: 100%;
     .btn {
       margin: 0;
+      white-space: normal;
+      word-break: break-word;
     }
   }
 
@@ -219,12 +222,10 @@
       }
     }
   }
-
   @include media-queries.mq($until: sm) {
     .action-banner__actions .btn {
       white-space: normal;
       word-break: break-word;
-      inline-size: 100%;
     }
     .action-banner__text {
       white-space: normal;
