--- a/components/nds-card/scss/card.scss
+++ b/components/nds-card/scss/card.scss
@@ -23,7 +23,7 @@
 /// @since 0.3.1
 .card {
   @include layout.clearfix;
-  margin: utils.rem(0 0 spacing.$large 0);
+  margin: 0;
   position: relative;
 
   &--flush {
