NDS-472 Added comented code to check release command working correctly or not

--- a/components/nds-card/scss/card.scss
+++ b/components/nds-card/scss/card.scss
@@ -23,8 +23,8 @@
 /// @since 0.3.1
 .card {
   @include layout.clearfix;
-  margin: 0;
-  position: relative;
+  // margin: 0;
+  // position: relative;
 
   &--flush {
     margin-bottom: 0;
