NDS-487 update input and textarea border colour from DAC accessibility report

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -37,6 +37,8 @@ $btn-inverse-text: global.$nice-black;
 // Borders
 $border: global.$custom-grey-1;
 $border-selected: global.$nice-teal;
+// accessibility fix for input and textarea borders
+$border-dark: global.$nice-black;
 
 // Status
 $error: global.$custom-red-1;
