--- a/components/nds-input/scss/input.scss
+++ b/components/nds-input/scss/input.scss
@@ -31,7 +31,7 @@
   }
 
   &__input {
-    border: utils.rem(spacing.$xx-small) solid colours.$border;
+    border: utils.rem(spacing.$xx-small) solid colours.$border-dark;
     padding: utils.rem(spacing.$small);
     width: 100%;
 
