--- a/components/nds-checkbox/scss/checkbox.scss
+++ b/components/nds-checkbox/scss/checkbox.scss
@@ -7,121 +7,179 @@
 @use '@nice-digital/nds-core/scss/utils';
 
 // stylelint-disable no-descending-specificity
-
-$checkbox-size: utils.rem(spacing.$large);
-
-.checkbox {
-  @include typography.font-size(p);
-  display: block;
+.fieldset {
   margin-bottom: utils.rem(spacing.$medium);
-  min-height: $checkbox-size;
-  padding-left: $checkbox-size + utils.rem(spacing.$medium);
-  position: relative;
+  padding: utils.rem(spacing.$small);
+  border: none;
 
-  &:last-child,
-  &:last-of-type {
-    margin-bottom: 0;
-  }
-
-  &__label {
-    cursor: pointer;
-    display: block;
-    font-size: 1rem;
+  &__legend {
+    @include typography.font-size(p);
     font-weight: bold;
-    margin-bottom: utils.rem(spacing.$x-small);
-    padding: utils.rem(spacing.$x-small) 0;
-
-    // outside square
-    &:before {
-      background: transparent;
-      border: utils.rem(spacing.$xx-small) solid colours.$checkbox;
-      box-sizing: border-box;
-      content: '';
-      height: $checkbox-size;
-      left: 0;
-      position: absolute;
-      top: 0;
-      width: $checkbox-size;
-    }
-
-    // inside check / tick
-    &:after {
-      background: transparent;
-      border: solid;
-      border-top-color: transparent; // IE11 bug
-      border-width: 0 0 utils.rem(spacing.$x-small) utils.rem(spacing.$x-small);
-      content: '';
-      height: math.div(
-        $checkbox-size,
-        3
-      ); // this is the short end of the checkmark;
-      left: utils.rem(spacing.$small);
-      opacity: 0;
-      position: absolute;
-      top: utils.rem(spacing.$small);
-      transform: rotate(-45deg);
-      width: utils.rem(spacing.$medium);
-    }
-  }
-
-  &__input {
-    cursor: pointer;
-    height: $checkbox-size;
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    width: $checkbox-size;
-    z-index: 1;
-
-    &:focus + .checkbox__label:before {
-      @include focus.default-focus-style;
-    }
-
-    &:checked + .checkbox__label:after {
-      opacity: 1;
-    }
-
-    &:disabled {
-      cursor: default;
-
-      & + .checkbox__label {
-        cursor: default;
-        opacity: 0.5;
-      }
-    }
+    margin-left: utils.rem(-(spacing.$x-small));
+    padding-left: utils.rem(spacing.$x-small);
+    padding-right: utils.rem(spacing.$x-small);
   }
 
   &__hint {
-    color: colours.$checkbox-hint;
-    margin-bottom: utils.rem(spacing.$small);
+    color: colours.$form-group-hint;
     margin-top: utils.rem(spacing.$x-small);
   }
 
   &__error-message {
     color: colours.$error;
     font-weight: bold;
+    margin-top: utils.rem(spacing.$x-small);
   }
+}
+// ----------------------
+// Checkbox group styling
+// ----------------------
+$checkbox-size: utils.rem(spacing.$large);
 
-  &--error .checkbox__label {
-    color: colours.$error;
+.checkbox-group {
+  &__item {
+    font-size: 1rem;
+    line-height: 1.6;
+    display: block;
+    margin-bottom: 1rem;
+    min-height: 2rem 36px;
+    padding-left: 3rem;
+    position: relative;
 
-    &:before {
-      @include typography.default-error-style;
+    &:last-child,
+    &:last-of-type {
+      margin-bottom: 0;
     }
 
-    &:after {
-      color: colours.$checkbox;
+    &__input {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: $checkbox-size;
+      height: $checkbox-size;
+      margin: 0;
+      cursor: pointer;
+      opacity: 0;
+      z-index: 2;
+
+      &:focus + .checkbox-group__item__label:before {
+        @include focus.default-focus-style;
+      }
+
+      &:checked + .checkbox-group__item__label:after {
+        opacity: 1;
+      }
+
+      &:disabled + .checkbox-group__item__label {
+        opacity: 0.5;
+        cursor: default;
+      }
+    }
+
+    &__label {
+      cursor: pointer;
+      display: block;
+      font-size: 1rem;
+      font-weight: bold;
+      margin-bottom: utils.rem(spacing.$x-small);
+      padding: utils.rem(spacing.$x-small) 0;
+
+      // outside square
+      &:before {
+        background: transparent;
+        border: utils.rem(spacing.$xx-small) solid colours.$checkbox;
+        box-sizing: border-box;
+        content: '';
+        height: $checkbox-size;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: $checkbox-size;
+        z-index: 1;
+      }
+
+      // inside check / tick
+      &:after {
+        background: transparent;
+        border: solid;
+        border-top-color: transparent; // IE11 bug
+        border-width: 0 0 utils.rem(spacing.$x-small)
+          utils.rem(spacing.$x-small);
+        content: '';
+        height: math.div(
+          $checkbox-size,
+          3
+        ); // this is the short end of the checkmark;
+        left: utils.rem(spacing.$small);
+        opacity: 0;
+        position: absolute;
+        top: utils.rem(spacing.$small);
+        transform: rotate(-45deg);
+        width: utils.rem(spacing.$medium);
+        z-index: 1;
+      }
+    }
+
+    &__hint {
+      color: colours.$checkbox-hint;
+      margin-bottom: utils.rem(spacing.$small);
+      margin-top: utils.rem(spacing.$x-small);
+    }
+
+    &__error-message {
+      color: colours.$error;
+      font-weight: bold;
     }
   }
-
   &--inline {
-    display: inline-block;
+    display: flex;
+    flex-wrap: wrap;
+    gap: utils.rem(spacing.$medium);
     margin-right: utils.rem(spacing.$medium);
-    vertical-align: top;
 
-    input {
-      margin-right: utils.rem(spacing.$x-small);
+    vertical-align: top;
+    .checkbox-group__item {
+      display: inline-flex;
+      align-items: center;
+      margin-bottom: utils.rem(spacing.$medium);
+
+      // Optional: hide per-item hint in inline mode
+      &__hint {
+        display: none;
+      }
+      input {
+        margin-right: utils.rem(spacing.$x-small);
+      }
+    }
+  }
+  &--error {
+    // Red for legend and error message
+    .fieldset__legend,
+    .fieldset__error-message {
+      color: colours.$error;
+    }
+
+    .checkbox-group__item__label {
+      color: colours.$error;
+    }
+
+    .checkbox-group__item__label::before {
+      @include typography.default-error-style; // gives red border
+    }
+
+    .checkbox-group__item__label::after {
+      border-color: colours.$checkbox;
+    }
+
+    // Checked boxes: keep normal border and tick colour
+    .checkbox-group__item__input:checked
+      + .checkbox-group__item__label::before {
+      border-color: colours.$checkbox;
+    }
+
+    // Keep focus accessible
+    .checkbox-group__item__input:focus + .checkbox-group__item__label::before {
+      @include focus.default-focus-style;
     }
   }
 }
