--- a/docs/styles/testpage.scss
+++ b/docs/styles/testpage.scss
@@ -8,10 +8,12 @@
 //TEST checkbox config
 $focus-outline-color: colours.$focus;
 $focus-outline-width: utils.rem(spacing.$x-small);
-$focus-outline-offset: utils.rem(spacing.$xx-small);
-$hover-stroke-width: utils.rem(spacing.$xx-small);
+// $focus-outline-offset: utils.rem(spacing.$xx-small);
+$focus-outline-offset: 2px;
+// $hover-stroke-width: utils.rem(spacing.$xx-small);
+$hover-stroke-width: 2px;
 $hover-color: colours.$text;
-$hover-transition-duration: 0.3s;
+$hover-transition-duration: 0.1s;
 $hover-transition-easing: ease-in-out;
 
 ///TEST CHECKBOX States/
@@ -23,7 +25,64 @@ $hover-transition-easing: ease-in-out;
 @mixin default-checkbox-hover {
 }
 
-.test-page {
+.test-checkbox-directly {
+  //checkbox wrapper - wraps label and input
+  .checkbox {
+  }
+
+  .checkbox:hover {
+    .checkbox__label::before {
+      border: 3px solid $hover-color;
+    }
+  }
+
+  //checkbox input - is hidden/opacity set to 0.
+  .checkbox__input {
+  }
+
+  //.checkbox__label::before = where border and outlines are handled
+  .checkbox__label::before {
+  }
+}
+
+.test-examples-section-one {
+  .checkbox__input {
+    &:focus + .checkbox__label:before,
+    &:active + .checkbox__label:before {
+      //transition effects
+      // transition: box-shadow $hover-transition-duration $hover-transition-easing,
+      //   outline-width $hover-transition-duration $hover-transition-easing,
+      //   outline-offset $hover-transition-duration $hover-transition-easing;
+    }
+  }
+  //test focus and hover state combined
+  .checkbox__label:before {
+    outline-offset: $focus-outline-offset;
+
+    transition: box-shadow $hover-transition-duration $hover-transition-easing,
+      outline-width $hover-transition-duration $hover-transition-easing;
+  }
+
+  // TODO: use those to override colors when checkbox has .checkbox--error
+  .checkbox:hover .checkbox__label:before,
+  .checkbox:has(.checkbox__input:focus):hover .checkbox__label:before {
+    box-shadow: 0 0 0 $hover-stroke-width $hover-color;
+    outline-offset: $focus-outline-offset;
+  }
+
+  .checkbox-error {
+    $focus-outline-color: colours.$error;
+  }
+
+  .checkbox:hover {
+    .checkbox__input:disabled + .checkbox__label::before {
+      box-shadow: none;
+      outline: none;
+    }
+  }
+}
+
+.test-examples-section-two {
   .checkbox__input {
     &:focus + .checkbox__label:before,
     &:active + .checkbox__label:before {
@@ -41,13 +100,15 @@ $hover-transition-easing: ease-in-out;
     outline-width: 0;
     outline-offset: 0;
 
-    // transition: box-shadow $hover-transition-duration $hover-transition-easing;
+    transition: box-shadow 0.1s $hover-transition-easing,
+      outline-width $hover-transition-duration $hover-transition-easing,
+      outline-offset $hover-transition-duration $hover-transition-easing;
   }
 
   // TODO: use those to override colors when checkbox has .checkbox--error
   .checkbox:hover .checkbox__label:before,
   .checkbox:has(.checkbox__input:focus):hover .checkbox__label:before {
-    box-shadow: 0 0 0.1px $hover-stroke-width $hover-color;
+    box-shadow: 0 0 0 $hover-stroke-width $hover-color;
     outline-offset: $focus-outline-offset;
   }
 
