NDS-506 update radio style focus styels consistent with how checkbox is handled.

--- a/components/nds-radio/scss/radio.scss
+++ b/components/nds-radio/scss/radio.scss
@@ -34,11 +34,10 @@ $radio-base-size: utils.rem(spacing.$large);
       opacity: 1;
     }
 
-    &:focus {
-      & + label:before {
-        @include focus.default-focus-style(true);
-      }
+    &:focus  + label:before {
+        @include focus.default-focus-style;
     }
+
   }
 
   &__label {
