--- a/docs/styles/testpage.scss
+++ b/docs/styles/testpage.scss
@@ -25,77 +25,10 @@ $hover-transition-easing: ease-in-out;
 @mixin default-checkbox-hover {
 }
 
-.test-checkbox-directly {
-  //checkbox wrapper - wraps label and input
-  .checkbox {
-  }
-
-  .checkbox:hover {
-    .checkbox__label::before {
-      border: 3px solid $hover-color;
-    }
-  }
-
-  //checkbox input - is hidden/opacity set to 0.
-  .checkbox__input {
-  }
-
-  //.checkbox__label::before = where border and outlines are handled
-  .checkbox__label::before {
-    border: 0.125rem solid #0e0e0e;
-  }
-
-  .checkbox:hover {
-    .checkbox__input:disabled + .checkbox__label::before {
-      box-shadow: none;
-      outline: none;
-      border: 0.125rem solid #0e0e0e;
-    }
-  }
-}
-
-.test-examples-section-one {
-  .checkbox__input {
-    &:focus-visible + .checkbox__label:before,
-    &:active + .checkbox__label:before {
-      //transition effects
-      // transition: box-shadow $hover-transition-duration $hover-transition-easing,
-      //   outline-width $hover-transition-duration $hover-transition-easing,
-      //   outline-offset $hover-transition-duration $hover-transition-easing;
-    }
-  }
-  //test focus and hover state combined
-  .checkbox__label:before {
-    outline-offset: $focus-outline-offset;
-
-    transition: box-shadow $hover-transition-duration $hover-transition-easing,
-      outline-width $hover-transition-duration $hover-transition-easing;
-  }
-
-  // TODO: use those to override colors when checkbox has .checkbox--error
-  .checkbox:hover .checkbox__label:before,
-  .checkbox:has(.checkbox__input:focus-visible):hover .checkbox__label:before {
-    box-shadow: 0 0 0 $hover-stroke-width $hover-color;
-    outline-offset: $focus-outline-offset;
-  }
-
-  .checkbox-error {
-    $focus-outline-color: colours.$error;
-  }
-
-  .checkbox:hover {
-    .checkbox__input:disabled + .checkbox__label::before {
-      box-shadow: none;
-      outline: none;
-      border: 0.125rem solid #0e0e0e;
-    }
-  }
-}
-
 .test-examples-section-two {
   .checkbox__input {
-    &:focus-visible + .checkbox__label:before,
-    &:active + .checkbox__label:before {
+    &:focus-visible + .checkbox__label::before,
+    &:active + .checkbox__label::before {
       @include default-checkbox-focus;
 
       //transition effects
@@ -105,7 +38,7 @@ $hover-transition-easing: ease-in-out;
     }
   }
   //test focus and hover state combined
-  .checkbox__label:before {
+  .checkbox__label::before {
     // transition effects
     outline-width: 0;
     outline-offset: 0;
@@ -116,10 +49,11 @@ $hover-transition-easing: ease-in-out;
   }
 
   // TODO: use those to override colors when checkbox has .checkbox--error
-  .checkbox:hover .checkbox__label:before,
+  .checkbox:hover .checkbox__label::before,
   .checkbox:has(.checkbox__input:focus-visible):hover .checkbox__label:before {
     box-shadow: 0 0 0 $hover-stroke-width $hover-color;
     outline-offset: $focus-outline-offset;
+    color: red;
   }
 
   .checkbox-error {
@@ -128,6 +62,49 @@ $hover-transition-easing: ease-in-out;
 
   .checkbox:hover {
     .checkbox__input:disabled + .checkbox__label::before {
+      box-shadow: none;
+      outline: none;
+    }
+  }
+
+
+
+ .radio__input {
+  z-index: 1;
+ }
+// separate styles to debug click/focus and hover on radio - behaves differently to checkbox
+  .radio__input {
+    &:focus-visible + .radio__label::before,
+    &:active + .radio__label::before {
+      @include default-checkbox-focus;
+
+      //transition effects
+      // transition: outline-width $hover-transition-duration
+      //     $hover-transition-easing,
+      //   outline-offset $hover-transition-duration $hover-transition-easing;
+    }
+  }
+  //test focus and hover state combined
+  .radio__label::before {
+    // transition effects
+    outline-width: 0;
+    outline-offset: 0;
+
+    transition: box-shadow 0.1s $hover-transition-easing,
+      outline-width $hover-transition-duration $hover-transition-easing,
+      outline-offset $hover-transition-duration $hover-transition-easing;
+  }
+
+  // TODO: use those to override colors when checkbox has .checkbox--error
+  .radio:hover .radio__label::before,
+  .radio:has(.radio__input:focus-visible):hover .radio__label::before {
+    box-shadow: 0 0 0 $hover-stroke-width $hover-color;
+    outline-offset: $focus-outline-offset;
+    color: red;
+  }
+
+  .radio:hover {
+    .radio__input:disabled + .radio__label::before {
       box-shadow: none;
       outline: none;
     }
