NDS-501 add border to filter panel group using new border var

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -109,6 +109,7 @@ $enhanced-pagination-link-hover-background: global.$white;
 // Filters
 $filter-panel-background: global.$custom-grey-4;
 $filter-panel-heading-button-background: global.$custom-grey-2;
+$filter-group-border: global.$black-tint-2;
 $filter-group-heading-background: global.$custom-grey-2;
 $filter-group-heading-button-background: global.$custom-grey-2;
 $filter-group-heading-button-background-hover: global.$custom-grey-1;
