NDS-501 update border styles for input-field filter

--- a/components/nds-filters/scss/filter-input.scss
+++ b/components/nds-filters/scss/filter-input.scss
@@ -5,12 +5,11 @@
 @use './filter-group';
 
 .inputFilterBox {
+  border: 1px solid colours.$filter-group-border;
   margin-top: utils.rem(spacing.$medium);
 
   // Wrapper for the input and button
   &__controls {
-    border: utils.rem(spacing.$x-small) solid
-      colours.$filter-input-controls-border;
     padding: utils.rem(spacing.$small);
 
     label {
