NDS-501 add higher contrast border to mobile filter panel (and fix docs typo)

--- a/components/nds-filters/scss/filter-panel.scss
+++ b/components/nds-filters/scss/filter-panel.scss
@@ -37,7 +37,12 @@
 }
 
 .filter-panel {
+  border: 1px solid colours.$filter-group-border;
   margin: utils.rem(0 0 spacing.$medium 0);
+
+  @include media-queries.mq($from: sm) {
+    border: 0;
+  }
 
   // Heading can be one of:
   // - heading for server side rendering for non-js
