NDS-501-update-filter-panel (#392)
* NDS-501 add border to filter panel group using new border var

* NDS-501 update border styles for input-field filter

* NDS-501 swap border unset for border 0 so its actually supported 👀

* NDS-501 add z-index to filter group heading to resolve issue with focus state stacking

* NDS-501 add higher contrast border to mobile filter panel (and fix docs typo)

--- a/components/nds-filters/scss/filter-group.scss
+++ b/components/nds-filters/scss/filter-group.scss
@@ -20,9 +20,11 @@
   line-height: 1.6;
   max-width: 100%;
   padding: utils.rem(spacing.$small);
+  position: relative;
   text-align: left;
   text-decoration: none;
   width: 100%;
+  z-index: 1;
 
   &:hover {
     background: colours.$filter-group-heading-button-background-hover;
@@ -39,6 +41,7 @@
 /// Used to filter searches or lists of content.
 /// @since 0.5.0
 .filter-group {
+  border: 1px solid colours.$filter-group-border;
   margin-top: utils.rem(spacing.$medium);
 
   legend {
@@ -56,7 +59,7 @@
 
   // Wrapper for the options when filter is a list of checboxes
   &__options {
-    border: utils.rem(spacing.$x-small) solid colours.$filter-option-border;
+    border: 0;
 
     &[aria-hidden='true'] {
       display: none;
