NDS-436 Update $link-inverse-hover to #fff

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -9,7 +9,7 @@ $link-visited: global.$custom-purple-1;
 $link-active: global.$nice-black;
 $link-focus: global.$custom-blue-1;
 $link-inverse: global.$white;
-$link-inverse-hover: global.$custom-blue-3-tint;
+$link-inverse-hover: global.$white;
 $link-inverse-visited: global.$white;
 $link-inverse-active: global.$custom-blue-3-tint;
 $link-inverse-focus: global.$white;
