Change panel default background color to $nice-cream-3:#eeeae4

--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -158,7 +158,7 @@ $page-header-full-width-dark-background-text-colour: global.$white;
 $page-header-second-section-border-colour: global.$black-tint-2;
 
 // Panels
-$panel-default-background: global.$nice-cream;
+$panel-default-background: global.$nice-cream-3;
 $panel-default-border: global.$custom-grey-2;
 $panel-impact-background: global.$nice-blue;
 $panel-impact-border: global.$nice-blue;
