NDS-437 Change action-banner-subtle color to $nice-cream-1

--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -66,6 +66,7 @@
   &--subtle {
     @include typography.links-default;
     background: colours.$action-banner-subtle-background;
+    border: 0;
     color: colours.$text;
 
     .action-banner__actions {
