NDS-511 Add heading level in formgroup docs
- Removed duplicate legend element from code
-Added font-family to legend heading

--- a/components/nds-form-group/scss/form-group.scss
+++ b/components/nds-form-group/scss/form-group.scss
@@ -30,4 +30,7 @@
     font-weight: bold;
     margin-top: utils.rem(spacing.$x-small);
   }
+  &__heading {
+    font-family: typography.get-font-family(sans);
+  }
 }
