NDS-437 Reintroduce $nice-cream color in global tokens

--- a/components/nds-core/scss/colours/tokens/_global.scss
+++ b/components/nds-core/scss/colours/tokens/_global.scss
@@ -3,6 +3,7 @@
 // Primary palette
 $nice-teal: #228096;
 $nice-blue: #00436c;
+$nice-cream: #ded5ca;
 $white: #fff;
 $black: #000;
 $nice-black: #0e0e0e;
