--- a/components/nds-core/scss/colours/tokens/_alias.scss
+++ b/components/nds-core/scss/colours/tokens/_alias.scss
@@ -78,8 +78,8 @@ $accrordion-label-text-hover: global.$nice-blue-tint-4;
 // Action banner
 $action-banner-default-background: global.$nice-blue;
 $action-banner-default-border: global.$nice-black;
-$action-banner-subtle-background: global.$nice-cream;
-$action-banner-subtle-border: global.$nice-cream;
+$action-banner-subtle-background: global.$nice-cream-1;
+$action-banner-subtle-border: global.$nice-cream-1;
 $action-banner-full-width-background: global.$nice-teal;
 $action-banner-full-width-border: global.$nice-teal;
 $action-banner-full-width-subtle-background: global.$nice-cream-3;
@@ -158,7 +158,7 @@ $page-header-full-width-dark-background-text-colour: global.$white;
 $page-header-second-section-border-colour: global.$black-tint-2;
 
 // Panels
-$panel-default-background: global.$nice-cream;
+$panel-default-background: global.$nice-cream-3;
 $panel-default-border: global.$custom-grey-2;
 $panel-impact-background: global.$nice-blue;
 $panel-impact-border: global.$nice-blue;
