--- a/components/nds-core/scss/colours/tokens/_global.scss
+++ b/components/nds-core/scss/colours/tokens/_global.scss
@@ -2,7 +2,7 @@
 
 // Primary palette
 $nice-teal: #228096;
-$nice-cream: #f7f4f1;
+$nice-cream: #ded5ca;
 $nice-blue: #00436c;
 $white: #fff;
 $black: #000;
