NDS-511 Removed unwanted margin left and right from form group

--- a/components/nds-form-group/scss/form-group.scss
+++ b/components/nds-form-group/scss/form-group.scss
@@ -5,7 +5,7 @@
 
 .form-group {
   border: 0;
-  margin-bottom: utils.rem(spacing.$medium);
+  margin: 0 0 utils.rem(spacing.$medium) 0;
   padding: 0;
 
   &--no-legend {
